# UMDLoopROS

./: .gitignore  .gitmodules  README.md
src/2000-SimplifiedAssembly-01/: package.xml  setup.cfg  setup.py
src/2000-SimplifiedAssembly-01/launch/: launch.py
src/2000-SimplifiedAssembly-01/meshes/collision/: Left_Bogey.STL  Left_Front_Wheel.STL  Left_Middle_Wheel.STL
src/2000-SimplifiedAssembly-01/meshes/visual/: Left_Rocker.STL  Right_Bogey.STL  Right_Front_Wheel.STL  Right_Middle_Wheel.STL  Right_Rocker.STL
src/2000-SimplifiedAssembly-01/urdf/: ros2_drive_urdf.xacro
src/2000-SimplifiedAssembly-06/: package.xml  setup.cfg  setup.py
src/2000-SimplifiedAssembly-06/launch/: launch.py
src/2000-SimplifiedAssembly-06/urdf/: ros2_drive_urdf.xacro
src/arm/: CMakeLists.txt  package.xml
src/arm/config/: arm_controller.yaml
src/arm/description/: CMakeLists.txt  arm.sdf  package.xml
src/arm/description/config/: joint_names_1000-Reduced Modelv6.yaml
src/arm/description/launch/: display.launch  gazebo.launch
src/arm/description/meshes/: base.STL  bicep.STL  forearm.STL  shoulder.STL  wrist pitch.STL  wrist roll.STL  wrist yaw.STL
src/arm/description/urdf/: 1000-Reduced Modelv6.csv  1000-Reduced Modelv6.urdf  arm.urdf  arm.xacro.urdf
src/arm/launch/: arm.launch.py
src/arm/misc/: base_inertia.txt
src/articubot_one/launch/: launch_sim.launch.py
src/diff_drive/: CMakeLists.txt  diff_drive.xml  hardware_int.xml  package.xml
src/diff_drive/config/: diffbot_controllers.yaml  input_config.yaml  joystick.yaml
src/diff_drive/description/: robot.urdf.xacro  ros2_control.xacro
src/diff_drive/hardware/include/diff_drive/: drive.hpp
src/diff_drive/hardware/include/hardware/: drive.hpp
src/diff_drive/hardware/src/: drive.cpp
src/diff_drive/launch/: diffbot.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py  view_robot.launch.py
src/diff_drive/ros2_control/: diffbot.ros2_control.xacro
src/diff_drive/rviz/: diffbot_view.rviz
src/diff_drive/urdf/: diffbot.urdf.xacro
src/drive_hw/: CMakeLists.txt  package.xml  plugins.xml
src/drive_hw/include/drive_hw/: drive_hw.hpp  visibility_control.h
src/drive_hw/src/: drive_hw.cpp
src/example_2/description/urdf/: diffbot.urdf.xacro
src/keyboard_msgs/: CMakeLists.txt
src/loop_gazebo/: CMakeLists.txt  package.xml
src/loop_gazebo/hardware/include/: diffbot_system.hpp
src/loop_gazebo/hardware/include/ros2_control_demo_example_2/: diffbot_system.hpp
src/loop_gazebo/launch/: diffbot.launch.py
src/loop_gazebo/urdf/: diffbot.urdf.xacro
src/loop_hw/: CMakeLists.txt  loop_hw.xml  package.xml
src/loop_hw/include/hardware_interfaces/: rover_drivetrain.hpp
src/loop_hw/src/hardware_interfaces/: rover_drivetrain.cpp
src/loop_hw_desc/: CMakeLists.txt  package.xml
src/loop_hw_desc/config/: rover_config.yaml  sim_rover_config.yaml
src/loop_hw_desc/rover_drive/meshes/collision/: chassis.STL
src/loop_hw_desc/rover_drive/urdf/: ros2_drive_urdf.xacro
src/science/: CMakeLists.txt  package.xml
src/science/launch/: joy_launch.py  science.launch.py
src/science/src/: science_node.cpp
src/urc_hw/: CMakeLists.txt  package.xml  urc_hw.xml
src/urc_hw/include/urc_hw/hardware_interfaces/: rover_drivetrain.hpp
src/urc_hw/src/hardware_interfaces/: rover_drivetrain.cpp
